@@ -108,9 +108,9 @@ if (MINGW)
 	COMMAND ${CMAKE_COMMAND} -E copy "${wxWidgets_LIB_DIR}/wxmsw30ud_core_gcc810.dll" ".")
 endif()
 
-set(CPACK_PACKAGE_VERSION_MAJOR "2023")
-set(CPACK_PACKAGE_VERSION_MINOR "10")
-set(CPACK_PACKAGE_VERSION_PATCH "24")
+set(CPACK_PACKAGE_VERSION_MAJOR "2024")
+set(CPACK_PACKAGE_VERSION_MINOR "02")
+set(CPACK_PACKAGE_VERSION_PATCH "18")
 
 if (${CMAKE_HOST_SYSTEM_NAME} MATCHES "Linux")
 	install(TARGETS ${PROJECT_NAME} DESTINATION "bin")
